// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MaterialSymbol > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined"
  data-testid="icon"
>
  air
</span>
`;

exports[`MaterialSymbol > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined custom-class-name"
  data-testid="icon"
  style="color: white;"
>
  air
</span>
`;

exports[`MaterialSymbol > should support overriding the symbol configuration through the MATERIAL_CONFIG object 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined"
  data-testid="icon"
>
  air
</span>
`;

exports[`MaterialSymbol > should support overriding the symbol configuration through the MATERIAL_CONFIG object 2`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-rounded"
  data-testid="icon"
>
  air
</span>
`;

exports[`MaterialSymbol > should use inline styles for font variation settings when they do not match the MATERIAL_CONFIG 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined"
  data-testid="icon"
  style="--rmd-symbol-fill: 1;"
>
  air
</span>
`;

exports[`MaterialSymbol > should use inline styles for font variation settings when they do not match the MATERIAL_CONFIG 2`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined"
  data-testid="icon"
  style="--rmd-symbol-fill: 1; --rmd-symbol-grad: -25; --rmd-symbol-opsz: 48;"
>
  air
</span>
`;
